--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -95,4 +95,11 @@
     .sidebar_overlay{
         display: block;
     }
+  
+}
+
+@media (max-width:450px) {
+    .contact_btn{
+        display: none;
+    }
 }
